tests/ui/zero-contracts.stderr
error: no contracts were specified

         = help: add a `#[precondition]`

 --> $DIR/zero-contracts.rs:3:1
  |
3 | #[contracts]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `contracts` (in Nightly builds, run with -Z macro-backtrace for more info)
