tests/ui/zero-contracts.rs
use contracts::contracts;

#[contracts]
fn f() {}

fn main() {}
